fix: testimonial image overflow

--- a/css/queries.css
+++ b/css/queries.css
@@ -235,7 +235,8 @@
     margin-top: 10rem;
     width: 100%;
     margin-left: 0;
-    overflow-x: hidden;
+    overflow: visible;
+    padding-top: 6rem;
   }
 
   .test--hiden {
@@ -244,6 +245,8 @@
 
   .testimonial--item {
     padding: 3rem 6rem;
+    overflow: visible;
+    padding-top: 6rem;
   }
 
   .testimonial--item img {
